Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9314

fatal build error: viosslfactories.c:58:5: error: dereferencing pointer to incomplete type ‘DH {aka struct dh_st}

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL)
    • 5.5.48, 10.0.24, 10.1.12
    • Compiling, SSL
    • None
    • lsb_release -rd
        Description: openSUSE Leap 42.1 (x86_64)
        Release: 42.1
      gcc --version
        gcc (SUSE Linux) 5.3.1 20151207 [gcc-5-branch revision 231355]

    • 5.5.48-0

    Description

      building git 10.1-branch on linux64

      git pull
      git clean -xfd
      git reset --hard HEAD
      git branch -a
      	* 10.1
      	  remotes/origin/10.1
      	  remotes/origin/HEAD -> origin/10.1
       
      git log | head
      	commit 27e6fd9a596847a1a4c618d16ed43f6885dfe73a
      	Author: Sergey Vojtovich <svoj@mariadb.org>
      	Date:   Tue Dec 22 14:51:26 2015 +0400
       
      	    MDEV-9095 - [PATCH] systemd capability for --memlock
      	    
      	    Adjust systemd files to enable CAP_IPC_LOCK to allow rootless mlockall
      	    (triggered by memlock option).
      	    
      	    This is amended version of a patch originally submitted by Daniel Black.
       
      cmake ..  --debug-output -Wno-dev ...
      	...
      	-- Generating done
      	-- Build files have been written to: /usr/local/src/mariadb/bld
      make VERBOSE=1
      	...
      	[ 75%] Building C object vio/CMakeFiles/vio.dir/viosslfactories.c.o
      	cd /usr/local/src/mariadb/bld/vio && /usr/bin/gcc-5  -DHAVE_CONFIG_H -DHAVE_OPENSSL -DHAVE_SYSTEMD -I/usr/local/src/mariadb/bld/include -I/usr/local/src/mariadb/include -I/usr/local/ssl/include  -fno-delete-null-pointer-checks -D_FORTIFY_SOURCE=2 -fmessage-length=0 -fstack-protector  -march=x86-64 -mtune=nocona -I/usr/local/include -pie -fPIC -Wl,-z,relro,-z,now -fstack-protector --param=ssp-buffer-size=4 -DWITH_INNODB_DISALLOW_WRITES -O3 -DNDEBUG -D_FORTIFY_SOURCE=2 -DDBUG_OFF -DMY_PTHREAD_FASTMUTEX=1   -fPIC -o CMakeFiles/vio.dir/viosslfactories.c.o   -c /usr/local/src/mariadb/vio/viosslfactories.c
      	/usr/local/src/mariadb/vio/viosslfactories.c: In function ‘get_dh2048’:
      	/usr/local/src/mariadb/vio/viosslfactories.c:57:11: warning: implicit declaration of function ‘DH_new’ [-Wimplicit-function-declaration]
      	   if ((dh=DH_new()) == NULL) return(NULL);
      	           ^
      	/usr/local/src/mariadb/vio/viosslfactories.c:57:10: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
      	   if ((dh=DH_new()) == NULL) return(NULL);
      	          ^
      	/usr/local/src/mariadb/vio/viosslfactories.c:58:5: error: dereferencing pointer to incomplete type ‘DH {aka struct dh_st}’
      	   dh->p=BN_bin2bn(dh2048_p,sizeof(dh2048_p),NULL);
      	     ^
      	/usr/local/src/mariadb/vio/viosslfactories.c:58:9: warning: implicit declaration of function ‘BN_bin2bn’ [-Wimplicit-function-declaration]
      	   dh->p=BN_bin2bn(dh2048_p,sizeof(dh2048_p),NULL);
      	         ^
      	/usr/local/src/mariadb/vio/viosslfactories.c:61:5: warning: implicit declaration of function ‘DH_free’ [-Wimplicit-function-declaration]
      	   { DH_free(dh); return(NULL); }
      	     ^
      	vio/CMakeFiles/vio.dir/build.make:182: recipe for target 'vio/CMakeFiles/vio.dir/viosslfactories.c.o' failed
      	make[2]: *** [vio/CMakeFiles/vio.dir/viosslfactories.c.o] Error 1
      	make[2]: Leaving directory '/usr/local/src/mariadb/bld'
      	CMakeFiles/Makefile2:3432: recipe for target 'vio/CMakeFiles/vio.dir/all' failed
      	make[1]: *** [vio/CMakeFiles/vio.dir/all] Error 2
      	make[1]: Leaving directory '/usr/local/src/mariadb/bld'
      	Makefile:149: recipe for target 'all' failed
      	make: *** [all] Error 2

      Attachments

        Activity

          People

            serg Sergei Golubchik
            pgnd pgnd
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1d
                1d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.