MDEV-9314 fatal build error: viosslfactories.c:58:5: error: dereferencing pointer to incomplete type ‘DH {aka struct dh_st}

fixes for openssl that was built with -DOPENSSL_NO_DEPRECATED